--- a/onetest.conf
+++ b/onetest.conf
@@ -2,7 +2,7 @@
 bypass-system = true
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com, seed-sequoia.siri.apple.com, sequoia.apple.com, app.yinxiang.com, cable.auth.com, *.id.ui.direct, www.baidu.com, yunbusiness.ccb.com, wxh.wo.cn, gate.lagou.com, www.abchina.com.cn, mbank.psbc.com, ibfp.psbc.com
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
-# dns 最好使用国内公共 Doh 
+# dns 最好使用自己搭建的 Doh
 dns-server = https://dns.alidns.com/dns-query, https://1.12.12.12/dns-query
 ipv6 = false
 prefer-ipv6 = false
@@ -39,6 +39,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TencentVideo/TencentVideo.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,PROXY
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,PROXY
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China_Domain.list,DIRECT
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global_Domain.list,PROXY
 GEOIP,CN,DIRECT
@@ -49,67 +51,67 @@ localhost = 127.0.0.1
 ip6-localhost = ::1
 ip6-loopback = ::1
 # 阿里
-*.alibaba.cn = server:https://dns.alidns.com/dns-query // 阿里巴巴
-*.alibaba.com.cn = server:https://dns.alidns.com/dns-query // 阿里巴巴
-*.china.alibaba.com = server:https://dns.alidns.com/dns-query // Alibaba 中国
-*.1688.com = server:https://dns.alidns.com/dns-query // 1688
-*.taobao.com = server:https://dns.alidns.com/dns-query // 淘宝
-*.tbcache.com = server:https://dns.alidns.com/dns-query // 淘宝 缓存
-*.tmall.com = server:https://dns.alidns.com/dns-query // 天猫
-*.alicdn.com = server:https://dns.alidns.com/dns-query // 阿里 CDN
-*.aliyundrive.com = server:https://dns.alidns.com/dns-query // 阿里云盘
-*.aliyun.* = server:https://dns.alidns.com/dns-query // 阿里云
-*.aliyuncdn.* = server:https://dns.alidns.com/dns-query // 阿里云 CDN
-*.aliyunddos????.com = server:https://dns.alidns.com/dns-query // 阿里云 DDoS防护
-*.aliyuncs.com = server:https://dns.alidns.com/dns-query // 阿里云API服务
-*.aliyundunwaf.com = server:https://dns.alidns.com/dns-query // 阿里云Web应用防火墙
-*.aliapp.com = server:https://dns.alidns.com/dns-query // 云引擎应用平台
-*.aliapp.org = server:https://dns.alidns.com/dns-query // 上云平台
-*.alibabausercontent.com = server:https://dns.alidns.com/dns-query // 阿里用户上传资料
-*.mmstat.com = server:https://dns.alidns.com/dns-query // mmstat 数据统计 广告追踪
-tb.cn = server:https://dns.alidns.com/dns-query // 淘宝短网址
+*.alibaba.cn = server:223.5.5.5 // 阿里巴巴
+*.alibaba.com.cn = server:223.5.5.5 // 阿里巴巴
+*.china.alibaba.com = server:223.5.5.5 // Alibaba 中国
+*.1688.com = server:223.5.5.5 // 1688
+*.taobao.com = server:223.5.5.5 // 淘宝
+*.tbcache.com = server:223.5.5.5 // 淘宝 缓存
+*.tmall.com = server:223.5.5.5 // 天猫
+*.alicdn.com = server:223.5.5.5 // 阿里 CDN
+*.aliyundrive.com = server:223.5.5.5 // 阿里云盘
+*.aliyun.* = server:223.5.5.5 // 阿里云
+*.aliyuncdn.* = server:223.5.5.5 // 阿里云 CDN
+*.aliyunddos????.com = server:223.5.5.5 // 阿里云 DDoS防护
+*.aliyuncs.com = server:223.5.5.5 // 阿里云API服务
+*.aliyundunwaf.com = server:223.5.5.5 // 阿里云Web应用防火墙
+*.aliapp.com = server:223.5.5.5 // 云引擎应用平台
+*.aliapp.org = server:223.5.5.5 // 上云平台
+*.alibabausercontent.com = server:223.5.5.5 // 阿里用户上传资料
+*.mmstat.com = server:223.5.5.5 // mmstat 数据统计 广告追踪
+tb.cn = server:223.5.5.5 // 淘宝短网址
 
 # 蚂蚁集团
-*.alipay.com = server:https://dns.alidns.com/dns-query // 支付宝
-*.alipay.com.cn = server:https://dns.alidns.com/dns-query // 支付宝
-*.alipaydns.com = server:https://dns.alidns.com/dns-query // 支付宝 HTTP DNS
-*.alipayeshop.com = server:https://dns.alidns.com/dns-query // 支付宝 商家资源
-*.alipaylog.com = server:https://dns.alidns.com/dns-query // 支付宝 Mdap
-*.alipayobjects.com = server:https://dns.alidns.com/dns-query // 支付宝 静态资源
-*.alipay-eco.com = server:https://dns.alidns.com/dns-query // 支付宝 开放技术生态体系
+*.alipay.com = server:223.5.5.5 // 支付宝
+*.alipay.com.cn = server:223.5.5.5 // 支付宝
+*.alipaydns.com = server:223.5.5.5 // 支付宝 HTTP DNS
+*.alipayeshop.com = server:223.5.5.5 // 支付宝 商家资源
+*.alipaylog.com = server:223.5.5.5 // 支付宝 Mdap
+*.alipayobjects.com = server:223.5.5.5 // 支付宝 静态资源
+*.alipay-eco.com = server:223.5.5.5 // 支付宝 开放技术生态体系
 
 # 腾讯
-*.tencent.com = server:https://1.12.12.12/dns-query // 腾讯
-*.qcloud.com = server:https://1.12.12.12/dns-query // 腾讯云
-*.qcloudcdn.cn = server:https://1.12.12.12/dns-query // 腾讯云CDN
-*.qcloudcdn.com = server:https://1.12.12.12/dns-query // 腾讯云CDN
-*.qcloudcos.com = server:https://1.12.12.12/dns-query // 腾讯云对象储存
-*.qcloudimg.com = server:https://1.12.12.12/dns-query // 腾讯云静态资源
-*.qcloudcjgj.com = server:https://1.12.12.12/dns-query // 腾讯云超级管家
-*.qcloudwzgj.com = server:https://1.12.12.12/dns-query // 腾讯云网站管家
-*.qcloudzygj.com = server:https://1.12.12.12/dns-query // 腾讯云主页管家
-*.myqcloud.com = server:https://1.12.12.12/dns-query // 腾讯开放云
-*.tencent-cloud.net = server:https://1.12.12.12/dns-query // 腾讯云
-*.tencentcloud-aiot.com = server:https://1.12.12.12/dns-query // 腾讯云aiot解决方案
-*.tencentcloudapi.com = server:https://1.12.12.12/dns-query // 腾讯云API
-*.tencentcloudcr.com = server:https://1.12.12.12/dns-query // 腾讯云容器镜像服务TCR
-*.tencentcloudmarket.com = server:https://1.12.12.12/dns-query // 腾讯云云市场
-*.qq.com = server:https://1.12.12.12/dns-query // QQ
-*.qlogo.cn = server:https://1.12.12.12/dns-query // 腾讯头像
-*.qpic.cn = server:https://1.12.12.12/dns-query // 腾讯图片
-*.weixin.qq.com = server:https://1.12.12.12/dns-query // 微信
-*.wx.qq.com = server:https://1.12.12.12/dns-query // 微信
-*.weixin.com = server:https://1.12.12.12/dns-query // 微信
-*.weixinbridge.com = server:https://1.12.12.12/dns-query // 微信公众平台
-*.wechat.com = server:https://1.12.12.12/dns-query // WeChat
-*.servicewechat.com = server:https://1.12.12.12/dns-query // 微信小程序
-*.weiyun.com = server:https://1.12.12.12/dns-query // 微云
-*.gtimg.cn = server:https://1.12.12.12/dns-query // 腾讯 图片 静态资源
-*.idqqimg.com = server:https://1.12.12.12/dns-query // 腾讯 图片 静态资源
-*.cdn-go.cn = server:https://1.12.12.12/dns-query // 腾讯 静态资源 CDN
-*.smtcdns.com = server:https://1.12.12.12/dns-query // 腾讯云 智能云解析DNS
-*.smtcdns.net = server:https://1.12.12.12/dns-query // 腾讯云 智能云解析DNS
-url.cn = server:https://1.12.12.12/dns-query // 腾讯短网址
+*.tencent.com = server:119.29.29.29 // 腾讯
+*.qcloud.com = server:119.29.29.29 // 腾讯云
+*.qcloudcdn.cn = server:119.29.29.29 // 腾讯云CDN
+*.qcloudcdn.com = server:119.29.29.29 // 腾讯云CDN
+*.qcloudcos.com = server:119.29.29.29 // 腾讯云对象储存
+*.qcloudimg.com = server:119.29.29.29 // 腾讯云静态资源
+*.qcloudcjgj.com = server:119.29.29.29 // 腾讯云超级管家
+*.qcloudwzgj.com = server:119.29.29.29 // 腾讯云网站管家
+*.qcloudzygj.com = server:119.29.29.29 // 腾讯云主页管家
+*.myqcloud.com = server:119.29.29.29 // 腾讯开放云
+*.tencent-cloud.net = server:119.29.29.29 // 腾讯云
+*.tencentcloud-aiot.com = server:119.29.29.29 // 腾讯云aiot解决方案
+*.tencentcloudapi.com = server:119.29.29.29 // 腾讯云API
+*.tencentcloudcr.com = server:119.29.29.29 // 腾讯云容器镜像服务TCR
+*.tencentcloudmarket.com = server:119.29.29.29 // 腾讯云云市场
+*.qq.com = server:119.29.29.29 // QQ
+*.qlogo.cn = server:119.29.29.29 // 腾讯头像
+*.qpic.cn = server:119.29.29.29 // 腾讯图片
+*.weixin.qq.com = server:119.29.29.29 // 微信
+*.wx.qq.com = server:119.29.29.29 // 微信
+*.weixin.com = server:119.29.29.29 // 微信
+*.weixinbridge.com = server:119.29.29.29 // 微信公众平台
+*.wechat.com = server:119.29.29.29 // WeChat
+*.servicewechat.com = server:119.29.29.29 // 微信小程序
+*.weiyun.com = server:119.29.29.29 // 微云
+*.gtimg.cn = server:119.29.29.29 // 腾讯 图片 静态资源
+*.idqqimg.com = server:119.29.29.29 // 腾讯 图片 静态资源
+*.cdn-go.cn = server:119.29.29.29 // 腾讯 静态资源 CDN
+*.smtcdns.com = server:119.29.29.29 // 腾讯云 智能云解析DNS
+*.smtcdns.net = server:119.29.29.29 // 腾讯云 智能云解析DNS
+url.cn = server:119.29.29.29 // 腾讯短网址
 
 # 百度
 *.baidu = server:180.76.76.76 // 百度
@@ -162,13 +164,13 @@ urlqh.cn = server:https://doh.360.cn/dns-query // 360短网址
 cn-hk-eq-bcache-??.bilivideo.com = server:system // BiliBili 视频服务器（unknown）
 upos-hz-mirrorakam.akamaized.net = server:system // BiliBili upos视频服务器（akamai）
 upos-sz-mirrorasiaov.bilibilivideo.com = server:system // BiliBili upos视频服务器（asia-abroad.com）
-upos-sz-mirrorali.bilivideo.com = server:https://dns.alidns.com/dns-query // BiliBili upos视频服务器（阿里云）
-upos-sz-mirrorali?.bilivideo.com = server:https://dns.alidns.com/dns-query // BiliBili upos视频服务器（阿里云）
-upos-sz-mirrorali??.bilivideo.com = server:https://dns.alidns.com/dns-query // BiliBili upos视频服务器（阿里云）
+upos-sz-mirrorali.bilivideo.com = server:223.5.5.5 // BiliBili upos视频服务器（阿里云）
+upos-sz-mirrorali?.bilivideo.com = server:223.5.5.5 // BiliBili upos视频服务器（阿里云）
+upos-sz-mirrorali??.bilivideo.com = server:223.5.5.5 // BiliBili upos视频服务器（阿里云）
 upos-sz-mirrorbos.bilivideo.com = server:180.76.76.76 // BiliBili upos视频服务器（百度云）
-upos-sz-mirrorcos.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
-upos-sz-mirrorcos?.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
-upos-sz-mirrorcos??.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
+upos-sz-mirrorcos.bilivideo.com = server:119.29.29.29 // BiliBili upos视频服务器（腾讯云）
+upos-sz-mirrorcos?.bilivideo.com = server:119.29.29.29 // BiliBili upos视频服务器（腾讯云）
+upos-sz-mirrorcos??.bilivideo.com = server:119.29.29.29 // BiliBili upos视频服务器（腾讯云）
 upos-sz-mirrorhw.bilivideo.com = server:system // BiliBili upos视频服务器（华为云）
 upos-sz-mirrorhw?.bilivideo.com = server:system // BiliBili upos视频服务器（华为云）
 upos-sz-mirrorhwo?.bilivideo.com = server:system // BiliBili upos视频服务器（华为云）
@@ -181,7 +183,7 @@ upos-sz-mirrorwcs?.bilivideo.com = server:system // BiliBili upos视频服务器
 upos-sz-mirrorxycdn.bilivideo.com = server:system // BiliBili upos视频服务器（迅雷）
 upos-sz-upcdnbd??.bilivideo.com = server:180.76.76.76 // BiliBili upos视频服务器（百度云）
 upos-sz-upcdnhw.bilivideo.com = server:system // BiliBili uupos视频服务器（华为云）
-upos-sz-upcdntx.bilivideo.com = server:https://1.12.12.12/dns-query // BiliBili upos视频服务器（腾讯云）
+upos-sz-upcdntx.bilivideo.com = server:119.29.29.29 // BiliBili upos视频服务器（腾讯云）
 upos-sz-upcdnws.bilivideo.com = server:system // BiliBili upos视频服务器（网宿）
 upos-tf-all-js.bilivideo.com = server:system // BiliBili upos视频服务器（unknown）
 *.mcdn.bilivideo.com = server:system // BiliBili mCDN视频服务器
