--- a/onetest.conf
+++ b/onetest.conf
@@ -8,6 +8,7 @@ ipv6 = false
 prefer-ipv6 = false
 #搭配得当起到类似于 DNS 分流
 dns-fallback-system = false
+fallback-dns-server = 223.5.5.5,119.29.29.29
 dns-direct-system = true
 icmp-auto-reply = true
 always-reject-url-rewrite = false
